// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batched ops 1`] = `
"
WITH rows(tenant_id, user_id, name, _key) AS (VALUES
  ((NULL::\\"schema\\"\\"test_composite\\").tenant_id, (NULL::\\"schema\\"\\"test_composite\\").user_id, (NULL::\\"schema\\"\\"test_composite\\").name, '<key>'),
  ('1', '1', 'n1', '<key>'),
  ('1', '2', 'n2', '<key>'),
  ('1', '3', 'n3', '<key>'),
  ('1', '4', 'n4', '<key>'))
  INSERT INTO \\"schema\\"\\"test_composite\\" (tenant_id, user_id, name)
  SELECT tenant_id, user_id, name FROM rows OFFSET 1
  ON CONFLICT DO NOTHING RETURNING (SELECT _key FROM rows WHERE ROW(rows.tenant_id,rows.user_id)=ROW(\\"schema\\"\\"test_composite\\".tenant_id,\\"schema\\"\\"test_composite\\".user_id)), ROW(tenant_id,user_id) AS id
"
`;

exports[`batched ops 2`] = `""`;

exports[`batched ops 3`] = `
"
WITH rows(tenant_id, user_id, name, _key) AS (VALUES
  ((NULL::\\"schema\\"\\"test_composite\\").tenant_id, (NULL::\\"schema\\"\\"test_composite\\").user_id, (NULL::\\"schema\\"\\"test_composite\\").name, '<key>'),
  ('1', '1', 'new-name-1', '(1,1)')<reordered for test>,
  ('1', '2', 'new-name-2', '(1,2)')<reordered for test>,
  ('42', '42', 'absent', '(42,42)')<reordered for test>)
  UPDATE \\"schema\\"\\"test_composite\\" SET name=rows.name
  FROM rows WHERE ROW(\\"schema\\"\\"test_composite\\".tenant_id,\\"schema\\"\\"test_composite\\".user_id)=ROW(rows.tenant_id,rows.user_id) RETURNING (SELECT _key FROM rows WHERE ROW(rows.tenant_id,rows.user_id)=ROW(\\"schema\\"\\"test_composite\\".tenant_id,\\"schema\\"\\"test_composite\\".user_id))
"
`;

exports[`batched ops 4`] = `
"
INSERT INTO \\"schema\\"\\"test_composite\\" (tenant_id, user_id, name) VALUES
  ('1', '1', 'n11'),
  ('9', '9', 'n9')
  ON CONFLICT (tenant_id,user_id) DO UPDATE SET tenant_id=EXCLUDED.tenant_id, user_id=EXCLUDED.user_id, name=EXCLUDED.name RETURNING ROW(tenant_id,user_id) AS id
"
`;

exports[`batched ops 5`] = `
"
DELETE FROM \\"schema\\"\\"test_composite\\" WHERE ROW(tenant_id,user_id) IN(ROW('1','1'),ROW('1','2')) RETURNING ROW(tenant_id,user_id) AS id
"
`;

exports[`batched ops 6`] = `
"
SELECT tenant_id, user_id, name, ROW(tenant_id,user_id) AS id FROM \\"schema\\"\\"test_composite\\"
  WHERE ROW(tenant_id,user_id) IN(ROW('1','3'),ROW('1','424'))
"
`;

exports[`batched ops 7`] = `
"
SELECT tenant_id, user_id, name, ROW(tenant_id,user_id) AS id FROM \\"schema\\"\\"test_composite\\"
  WHERE (tenant_id='1'
    AND user_id=ANY('{3,4}'))
"
`;

exports[`batched ops 8`] = `
"
SELECT COUNT(1) AS count FROM \\"schema\\"\\"test_composite\\"
  WHERE user_id='3'
  UNION ALL
SELECT COUNT(1) AS count FROM \\"schema\\"\\"test_composite\\"
  WHERE tenant_id='1'
"
`;

exports[`batched ops 9`] = `
"
(SELECT '<hash>' AS _key, tenant_id, user_id, name, ROW(tenant_id,user_id) AS id FROM \\"schema\\"\\"test_composite\\"
  WHERE user_id='3'
    ORDER BY user_id ASC
  LIMIT 10)
  UNION ALL
(SELECT '<hash>' AS _key, tenant_id, user_id, name, ROW(tenant_id,user_id) AS id FROM \\"schema\\"\\"test_composite\\"
  WHERE tenant_id='1'
    ORDER BY user_id ASC
  LIMIT 10)
  UNION ALL
(SELECT '<hash>' AS _key, tenant_id, user_id, name, ROW(tenant_id,user_id) AS id FROM \\"schema\\"\\"test_composite\\"
  WHERE tenant_id='101'
    ORDER BY user_id ASC
  LIMIT 10)
"
`;

exports[`batched ops 10`] = `
"
(SELECT '<hash>' AS _key, tenant_id, user_id, name, ROW(tenant_id,user_id) AS id FROM \\"schema\\"\\"test_composite\\"
  WHERE ROW(tenant_id,user_id)=ROW('1','3')
    ORDER BY user_id ASC
  LIMIT 10)
  UNION ALL
(SELECT '<hash>' AS _key, tenant_id, user_id, name, ROW(tenant_id,user_id) AS id FROM \\"schema\\"\\"test_composite\\"
  WHERE ROW(tenant_id,user_id) IN(ROW('1','3'),ROW('1','4'))
    ORDER BY user_id ASC
  LIMIT 10)
"
`;

exports[`single ops 1`] = `
"
INSERT INTO \\"schema\\"\\"test_composite\\" (tenant_id, user_id, name) VALUES
  ('1', '1', 'n1') ON CONFLICT DO NOTHING RETURNING ROW(tenant_id,user_id) AS id
"
`;

exports[`single ops 2`] = `""`;

exports[`single ops 3`] = `
"
INSERT INTO \\"schema\\"\\"test_composite\\" (tenant_id, user_id, name) VALUES
  ('1', '101', 'n11')
  ON CONFLICT (tenant_id,user_id) DO UPDATE SET tenant_id=EXCLUDED.tenant_id, user_id=EXCLUDED.user_id, name=EXCLUDED.name RETURNING ROW(tenant_id,user_id) AS id
"
`;

exports[`single ops 4`] = `
"
UPDATE \\"schema\\"\\"test_composite\\" SET name='absent' WHERE ROW(tenant_id,user_id)=ROW('42','42') RETURNING ROW(tenant_id,user_id) AS id
"
`;

exports[`single ops 5`] = `
"
UPDATE \\"schema\\"\\"test_composite\\" SET name='new-name' WHERE ROW(tenant_id,user_id)=ROW('1','1') RETURNING ROW(tenant_id,user_id) AS id
"
`;

exports[`single ops 6`] = `
"
DELETE FROM \\"schema\\"\\"test_composite\\" WHERE ROW(tenant_id,user_id) IN(ROW('1','1')) RETURNING ROW(tenant_id,user_id) AS id
"
`;

exports[`single ops 7`] = `
"
DELETE FROM \\"schema\\"\\"test_composite\\" WHERE ROW(tenant_id,user_id) IN(ROW('1','2')) AND (1=1) RETURNING ROW(tenant_id,user_id) AS id
"
`;

exports[`single ops 8`] = `
"
SELECT COUNT(1) AS count FROM \\"schema\\"\\"test_composite\\"
  WHERE user_id='3'
"
`;

exports[`single ops 9`] = `
"
SELECT tenant_id, user_id, name, ROW(tenant_id,user_id) AS id FROM \\"schema\\"\\"test_composite\\"
  WHERE user_id='3'
  LIMIT 10
"
`;
